[gd_scene load_steps=3 format=3 uid="uid://bq2jbfvd336vg"]

[ext_resource type="Texture2D" uid="uid://b2ack4mtebj7o" path="res://Sprites/cat_eye_attempt.png" id="1_2q1qy"]
[ext_resource type="Script" uid="uid://db6e5xkvi7l7y" path="res://Scenes/Utilities/item_option.gd" id="1_105yq"]

[node name="ItemOption" type="Button"]
custom_minimum_size = Vector2(385, 95)
anchors_preset = -1
anchor_right = 0.334
anchor_bottom = 0.148
offset_right = 0.231964
offset_bottom = -0.903999
script = ExtResource("1_105yq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 88.0
color = Color(0.273963, 0.268393, 0.27265, 1)

[node name="Item_Icon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 72.0
texture = ExtResource("1_2q1qy")

[node name="Label_name" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 8.0
offset_right = 328.0
offset_bottom = 32.0
text = "Name"

[node name="Label_lvl" type="Label" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 31.0
text = "lvl.1
"

[node name="Label_desc" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 32.0
offset_right = 376.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 14
text = "Description of Item"
autowrap_mode = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
